# aeneas

./: .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  charon-pin  check_ocaml  doc.html  flake.nix  funs-external-stdlib.md  manifest-design-notes.md  shell.nix
.claude-plugin/: marketplace.json  plugin.json
.github/: instructions  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-userdocs.yml  ci.yml  deploy-userdocs.yml  gh-pages.yml  lean-release-tag.yml  release.yml  select-runner.yml  userdocs.yml
backends/coq/: Primitives.v
backends/fstar/: Primitives.fst
backends/hol4/: Holmakefile  Primitives.sml  PrimitivesScript.sml  PrimitivesTheory.sig  Test.sml  TestScript.sml  TestTheory.sig  divDefExampleScript.sml  divDefExampleTheory.sig  divDefLib.sig  divDefLib.sml  divDefLibExampleScript.sml  divDefLibTestScript.sml  divDefLibTestTheory.sig  divDefNoFixLib.sig  divDefNoFixLib.sml  divDefNoFixLibTestScript.sml  divDefNoFixLibTestTheory.sig  divDefProto2Script.sml  divDefProto2TestScript.sml  divDefProto2Theory.sig  divDefProtoScript.sml  divDefProtoTheory.sig  divDefScript.sml  divDefTheory.sig  evalLib.sig  evalLib.sml  ilistScript.sml  ilistTheory.sig  primitivesArithScript.sml  (+14 more)
compiler/: .ocamlformat  AssociatedTypes.ml  Assumed.ml  BorrowCheck.ml  Collections.ml  Config.ml  ConstStrings.ml  Contexts.ml  Cps.ml  Crates.ml  Driver.ml  Errors.ml  Expressions.ml  ExpressionsUtils.ml  Extract.ml  ExtractAssumed.ml  ExtractBase.ml  ExtractBuiltin.ml  ExtractName.ml  ExtractToCoq.ml  ExtractToFStar.ml  ExtractTypes.ml  FunsAnalysis.ml  Identifiers.ml  Interpreter.ml  InterpreterBorrows.ml  InterpreterBorrows.mli  InterpreterBorrowsCore.ml  InterpreterExpansion.ml  InterpreterExpansion.mli  InterpreterExpressions.ml  InterpreterExpressions.mli  InterpreterLoops.ml  InterpreterLoops.mli  InterpreterLoopsCore.ml  InterpreterLoopsFixedPoint.ml  InterpreterLoopsFixedPoint.mli  InterpreterLoopsJoinCtxs.ml  InterpreterLoopsJoinCtxs.mli  InterpreterLoopsMatchCtxs.ml  (+47 more)
compiler/extract/: Extract.ml
compiler/fstar/: Primitives.fst
compiler/interp/: InterpreterBorrows.ml  InterpreterLoopsJoinCtxs.mli  InterpreterProjectors.ml
compiler/llbc/: Meta.ml  Substitute.ml  Values.ml
compiler/pure/: PrintPure.ml  Pure.ml  ReorderDecls.ml
compiler/utils/: Identifiers.ml
docs/: verification-docs.md
documentation/: README.md  aeneas-overview.md  crypto-verification.md  emit-json.md  getting-started.md  glossary.md  lean-lsp-tool.md  proof-strategies.md  tactics-reference.md  tips-and-tricks.md
fstar/: Assumed.fst  Primitives.fst
lean/: Primitives.lean
patches/: charon-aarch64-cargo-target.patch
rust-scripts/: Cargo.toml
rust-tests/: Cargo.toml
scripts/: check-charon-install.sh  check-extract-lean-builtins.sh  ci-check-charon-pin-is-forward.sh  ci-check-charon-pin-is-merged.sh  ci-check-charon-pin.sh  ci-precompile-lean.sh  ci-release-message.py  lean_lsp.py  make-charon-companion-pr.sh  sync-claude-skills.sh  sync-skills.sh  update-charon-pin.sh
src/: Assumed.ml  BorrowCheck.ml  CfimAst.ml  CfimAstUtils.ml  CfimOfJson.ml  Collections.ml  Config.ml  Contexts.ml  Cps.ml  Crates.ml  DocInfo.ml  EmitJson.ml  Errors.ml  Expressions.ml  ExtractAst.ml  ExtractToFStar.ml  ExtractToFstar.ml  FunIdentifier.ml  FunsAnalysis.ml  Identifiers.ml  Interpreter.ml  InterpreterBorrows.ml  InterpreterBorrowsCore.ml  InterpreterExpansion.ml  InterpreterExpressions.ml  InterpreterPaths.ml  InterpreterProjectors.ml  InterpreterStatements.ml  InterpreterUtils.ml  Invariants.ml  LlbcAst.ml  LlbcAstUtils.ml  LlbcOfJson.ml  Logging.ml  Main.ml  Makefile  Manifest.ml  Meta.ml  Modules.ml  NameMatcher.ml  (+40 more)
src/aeneas-ppx/: AeneasPpx.ml  dune
src/extract/: ConstStrings.ml  Extract.ml  ExtractBase.ml  ExtractBuiltin.ml  ExtractBuiltinCore.ml  ExtractBuiltinLean.ml  ExtractErrors.ml  ExtractName.ml  ExtractTypes.ml
src/file/: FileGraph.ml  FileMapping.ml  FilePlan.ml
src/interp/: Cps.ml  Interp.ml  InterpAbs.ml  InterpAbs.mli  InterpBorrows.ml  InterpBorrows.mli  InterpBorrowsCore.ml  InterpExpansion.ml  InterpExpansion.mli  InterpExpressions.ml  InterpExpressions.mli  InterpJoin.ml  InterpJoin.mli  InterpJoinCore.ml  InterpLoops.ml  InterpLoopsFixedPoint.ml  InterpLoopsFixedPoint.mli  InterpMatchCtxs.ml  InterpMatchCtxs.mli  InterpPaths.ml  InterpPaths.mli  InterpProjectors.ml  InterpProjectors.mli  InterpReduceCollapse.ml  InterpReduceCollapse.mli  InterpStatements.ml  InterpStatements.mli  InterpUtils.ml  Interpreter.ml  InterpreterAbs.ml  InterpreterAbs.mli  InterpreterAbsExpr.ml  InterpreterBorrows.ml  InterpreterBorrows.mli  InterpreterBorrowsCore.ml  InterpreterExpansion.ml  InterpreterExpansion.mli  InterpreterExpressions.ml  InterpreterExpressions.mli  InterpreterJoin.ml  (+23 more)
src/llbc/: AssociatedTypes.ml  Assumed.ml  Builtin.ml  Contexts.ml  ContextsBase.ml  ExpressionsUtils.ml  FunsAnalysis.ml  LlbcAst.ml  LlbcAstUtils.ml  LlbcOfJson.ml  Meta.ml  Print.ml  PrintBase.ml  RegionsHierarchy.ml  Substitute.ml  Types.ml  TypesAnalysis.ml  TypesUtils.ml  Values.ml  ValuesUtils.ml
src/pure/: PrintPure.ml  Pure.ml  PureErrors.ml  PureMicroPasses.ml  PureMicroPassesAnnots.ml  PureMicroPassesBase.ml  PureMicroPassesGeneral.ml  PureMicroPassesLoops.ml  PureMicroPassesPrettyNames.ml  PureTypeCheck.ml  PureUtils.ml  ReorderDecls.ml
src/symbolic/: PrintSymbolicAst.ml  SymbolicAst.ml  SymbolicToPure.ml  SymbolicToPureAbs.ml  SymbolicToPureCore.ml  SymbolicToPureExpressions.ml  SymbolicToPureTypes.ml  SymbolicToPureValues.ml  SynthesizeSymbolic.ml
src/utils/: Collections.ml  Deps.ml  FileGraph.ml  FileMapping.ml  FilePlan.ml  SCC.ml  StringUtils.ml  Utils.ml
tests/: .gitignore  Hashmap.Clauses.fst  Makefile  Makefile.template  README.md  trace_reference.txt
tests/src/betree/: Cargo.toml  Makefile  README.md  aeneas-test-options
tests/src/betree/src/: betree.rs  betree_utils.rs  main.rs
tests/test_runner/: .ocamlformat  Backend.ml  Input.ml  Utils.ml  aeneas_test_runner.opam  dune  dune-project  run_test.ml
(+1358 files in other folders)
