(executable
 (name driver)
 (public_name aeneas_driver)
 (package aeneas)
 (libraries aeneas)
 (modules Driver))

(library
 (name aeneas) ;; The name as used in the project
 (public_name aeneas) ;; The name as revealed to the projects importing this library
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord visitors.ppx))
 (libraries charon core_unix unionFind ocamlgraph)
 (modules
  AssociatedTypes
  Assumed
  Collections
  Config
  ConstStrings
  Contexts
  Cps
  Expressions
  ExpressionsUtils
  Extract
  ExtractBase
  ExtractBuiltin
  ExtractTypes
  FunsAnalysis
  Identifiers
  InterpreterBorrowsCore
  InterpreterBorrows
  InterpreterExpansion
  InterpreterExpressions
  Interpreter
  InterpreterLoopsCore
  InterpreterLoopsMatchCtxs
  InterpreterLoopsJoinCtxs
  InterpreterLoopsFixedPoint
  InterpreterLoops
  InterpreterPaths
  InterpreterProjectors
  InterpreterStatements
  InterpreterUtils
  Invariants
  LlbcAst
  LlbcAstUtils
  LlbcOfJson
  Logging
  Meta
  Names
  PrePasses
  Print
  PrintPure
  PrimitiveValues
  PrimitiveValuesUtils
  PureMicroPasses
  Pure
  PureTypeCheck
  PureUtils
  ReorderDecls
  SCC
  Scalars
  StringUtils
  Substitute
  SymbolicAst
  SymbolicToPure
  SynthesizeSymbolic
  TranslateCore
  Translate
  TypesAnalysis
  Types
  TypesUtils
  Utils
  Values
  ValuesUtils))

(documentation
 (package aeneas))

(env
 (dev
  (flags
   :standard
   -safe-string
   -g
   ;-dsource
   -warn-error
   -5@8-9-11-14-33-20-21-26-27-39))
 (release
  (flags
   :standard
   -safe-string
   -g
   ;-dsource
   -warn-error
   -5@8-9-11-14-33-20-21-26-27-39)))
