(executable
 (name main)
 (public_name aeneas)
 (package aeneas)
 (libraries aeneas)
 (modules Main))

(library
 (name aeneas) ;; The name as used in the project
 (public_name aeneas) ;; The name as revealed to the projects importing this library
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord visitors.ppx))
 (libraries charon core_unix unionFind ocamlgraph str)
 (modules
  AssociatedTypes
  Assumed
  Collections
  Config
  ConstStrings
  Contexts
  Cps
  Errors
  Expressions
  ExpressionsUtils
  Extract
  ExtractBase
  ExtractBuiltin
  ExtractName
  ExtractTypes
  FunsAnalysis
  Identifiers
  InterpreterBorrowsCore
  InterpreterBorrows
  InterpreterExpansion
  InterpreterExpressions
  Interpreter
  InterpreterLoopsCore
  InterpreterLoopsMatchCtxs
  InterpreterLoopsJoinCtxs
  InterpreterLoopsFixedPoint
  InterpreterLoops
  InterpreterPaths
  InterpreterProjectors
  InterpreterStatements
  InterpreterUtils
  Invariants
  LlbcAst
  LlbcAstUtils
  LlbcOfJson
  Logging
  Meta
  PrePasses
  Print
  PrintPure
  PureMicroPasses
  Pure
  PureTypeCheck
  PureUtils
  RegionsHierarchy
  ReorderDecls
  SCC
  Scalars
  StringUtils
  Substitute
  SymbolicAst
  SymbolicToPure
  SynthesizeSymbolic
  TranslateCore
  Translate
  TypesAnalysis
  Types
  TypesUtils
  Utils
  Values
  ValuesUtils))

(documentation
 (package aeneas))

(env
 (dev
  (flags
   :standard
   -safe-string
   -g
   ;-dsource
   -warn-error
   -5@8-11-14-33-20-21-26-27-39))
 (release
  (flags
   :standard
   -safe-string
   -g
   ;-dsource
   -warn-error
   -5@8-11-14-33-20-21-26-27-39)))
