(executable
 (name main)
 (public_name aeneas)
 (package aeneas)
 (libraries aeneas)
 (modes byte exe)
 (modules Main))

(include_subdirs unqualified)

;; Scan all subdirectories for OCaml files

(library
 (name aeneas) ;; The name as used in the project
 (public_name aeneas) ;; The name as revealed to the projects importing this library
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord visitors.ppx))
 (libraries charon core_unix ocamlgraph str)
 (modules
  BorrowCheck
  Builtin
  Collections
  Config
  ConstStrings
  Contexts
  ContextsBase
  Cps
  Errors
  Expressions
  ExpressionsUtils
  Extract
  ExtractBase
  ExtractBuiltin
  ExtractErrors
  ExtractName
  ExtractTypes
  FunsAnalysis
  Identifiers
  InterpreterAbs
  InterpreterBorrowsCore
  InterpreterBorrows
  InterpreterExpansion
  InterpreterExpressions
  Interpreter
  InterpreterLoopsCore
  InterpreterLoopsMatchCtxs
  InterpreterLoopsJoinCtxs
  InterpreterLoopsFixedPoint
  InterpreterLoops
  InterpreterPaths
  InterpreterProjectors
  InterpreterStatements
  InterpreterUtils
  Invariants
  LlbcAst
  LlbcAstUtils
  LlbcOfJson
  Logging
  Meta
  NameMatcher
  PrePasses
  Print
  PrintPure
  PrintSymbolicAst
  PureMicroPasses
  Pure
  PureTypeCheck
  PureUtils
  RegionsHierarchy
  ReorderDecls
  SCC
  Scalars
  StringUtils
  Substitute
  SymbolicAst
  SymbolicToPure
  SynthesizeSymbolic
  TranslateCore
  Translate
  TypesAnalysis
  Types
  TypesUtils
  Utils
  Values
  ValuesUtils))

(documentation
 (package aeneas))

(env
 (dev
  (flags
   :standard
   -safe-string
   -g
   ;-dsource
   -warn-error
   -3-5@8-11-14-33-20-21-26-27-39
   -w
   -30))
 (release
  (flags
   :standard
   -safe-string
   -g
   ;-dsource
   -warn-error
   -3-5@8-11-14-33-20-21-26-27-39
   -w
   -30)))
