(executable
 (name main)
 (public_name aeneas)
 (package aeneas)
 (libraries aeneas)
 (modes byte exe)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord visitors.ppx aeneas.ppx))
 (modules Main))

;; TODO: change to qualified

(include_subdirs unqualified)

;; Scan all subdirectories for OCaml files

(library
 (name aeneas) ;; The name as used in the project
 (public_name aeneas) ;; The name as revealed to the projects importing this library
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord visitors.ppx aeneas.ppx))
 (libraries charon core_unix ocamlgraph str progress domainslib)
 (modules
  BorrowCheck
  Builtin
  Collections
  Config
  ConstStrings
  Contexts
  ContextsBase
  Cps
  Errors
  Expressions
  ExpressionsUtils
  Extract
  ExtractBase
  ExtractBuiltin
  ExtractBuiltinCore
  ExtractBuiltinLean
  ExtractErrors
  ExtractName
  ExtractTypes
  FunsAnalysis
  Identifiers
  InterpAbs
  InterpBorrowsCore
  InterpBorrows
  InterpExpansion
  InterpExpressions
  Interp
  InterpJoin
  InterpJoinCore
  InterpLoopsFixedPoint
  InterpLoops
  InterpMatchCtxs
  InterpPaths
  InterpProjectors
  InterpReduceCollapse
  InterpStatements
  InterpUtils
  Invariants
  LlbcAst
  LlbcAstUtils
  LlbcOfJson
  Logging
  Meta
  NameMatcher
  Parallel
  PrePasses
  Print
  PrintPure
  PrintSymbolicAst
  ProgressBar
  PureMicroPasses
  Pure
  PureErrors
  PureTypeCheck
  PureUtils
  RegionsHierarchy
  ReorderDecls
  SCC
  Scalars
  StringUtils
  Substitute
  SymbolicAst
  SymbolicToPure
  SymbolicToPureAbs
  SymbolicToPureCore
  SymbolicToPureExpressions
  SymbolicToPureTypes
  SymbolicToPureValues
  SynthesizeSymbolic
  TranslateCore
  Translate
  TypesAnalysis
  Types
  TypesUtils
  Utils
  Values
  ValuesUtils))

(documentation
 (package aeneas))

(env
 (dev
  (flags
   :standard
   -safe-string
   -g
   ;-dsource
   -warn-error
   -3-5@8-11-14-33-20-21-26-27-39
   -w
   -30))
 (release
  (flags
   :standard
   -safe-string
   -g
   ;-dsource
   -warn-error
   -3-5@8-11-14-33-20-21-26-27-39
   -w
   -30)))
