(executable
 (name main)
 (public_name aeneas)
 (package aeneas)
 (libraries aeneas)
 (modes byte exe)
 (preprocess
  (pps
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord
   visitors.ppx
   aeneas.ppx))
 (modules Main))

;; TODO: change to qualified

(include_subdirs unqualified)

;; Scan all subdirectories for OCaml files

(library
 (name aeneas) ;; The name as used in the project
 (public_name aeneas) ;; The name as revealed to the projects importing this library
 (preprocess
  (pps
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord
   visitors.ppx
   aeneas.ppx))
 (libraries charon core_unix ocamlgraph str progress domainslib)
 (modules
  BorrowCheck
  Builtin
  Collections
  Config
  ConstStrings
  Contexts
  ContextsBase
  Cps
  Deps
  Errors
  Expressions
  ExpressionsUtils
  Extract
  ExtractBase
  ExtractBuiltin
  ExtractBuiltinCore
  ExtractBuiltinLean
  ExtractErrors
  ExtractName
  ExtractTypes
  FunsAnalysis
  GitVersion
  Identifiers
  InterpAbs
  InterpBorrowsCore
  InterpBorrows
  InterpExpansion
  InterpExpressions
  Interp
  InterpJoin
  InterpJoinCore
  InterpLoopsFixedPoint
  InterpLoops
  InterpMatchCtxs
  InterpPaths
  InterpProjectors
  InterpReduceCollapse
  InterpStatements
  InterpUtils
  Invariants
  LlbcAst
  LlbcAstUtils
  LlbcOfJson
  Logging
  Meta
  NameMatcher
  Parallel
  PrePasses
  Print
  PrintBase
  PrintPure
  PrintSymbolicAst
  ProgressBar
  Pure
  PureErrors
  PureMicroPasses
  PureMicroPassesAnnots
  PureMicroPassesBase
  PureMicroPassesGeneral
  PureMicroPassesLoops
  PureMicroPassesPrettyNames
  PureTypeCheck
  PureUtils
  RegionsHierarchy
  ReorderDecls
  SCC
  Scalars
  StringUtils
  Substitute
  SymbolicAst
  SymbolicToPure
  SymbolicToPureAbs
  SymbolicToPureCore
  SymbolicToPureExpressions
  SymbolicToPureTypes
  SymbolicToPureValues
  SynthesizeSymbolic
  TranslateCore
  Translate
  TypesAnalysis
  Types
  TypesUtils
  Utils
  Values
  ValuesUtils))

(test
 (name loop_exit_shape_test)
 (modules Loop_exit_shape_test)
 (libraries aeneas))

(test
 (name symbolic_loop_exit_shape_test)
 (modules Symbolic_loop_exit_shape_test)
 (libraries aeneas))

(test
 (name loop_fixed_point_entry_test)
 (modules Loop_fixed_point_entry_test)
 (libraries aeneas))

;; Embed the git commit into the binary so that `aeneas -version` can report it.
;; Follows the same pattern as opam (see https://github.com/ocaml/opam/blob/master/src/client/dune).
;; Step 1: capture the git description (commit hash, with -dirty suffix if needed).

(rule
 (target git-sha)
 (deps (universe))
 (action
  (ignore-stderr
   (with-stdout-to
    %{target}
    (system "git describe --always --dirty 2>/dev/null || echo")))))

;; Step 2: generate GitVersion.ml from the captured hash.
;; Produces `let commit = Some "<hash>"` or `let commit = None` if git is unavailable.

(rule
 (target GitVersion.ml)
 (deps git-sha)
 (action
  (with-stdout-to
   %{target}
   (system
    "read -r hash < git-sha && [ -n \"$hash\" ] && echo 'let commit = Some \"'$hash'\"' || echo 'let commit = None'"))))

(documentation
 (package aeneas))

(env
 (dev
  (flags
   :standard
   -safe-string
   -g
   ;-dsource
   -warn-error
   -3-5@8-11-14-33-20-21-26-27-39
   -w
   -30))
 (release
  (flags
   :standard
   -safe-string
   -g
   ;-dsource
   -warn-error
   -3-5@8-11-14-33-20-21-26-27-39
   -w
   -30)))
