(lang dune 3.7)
(map_workspace_root false)

(name aeneas)

(version 0.1)

(generate_opam_files true)

(source
 (uri git+https://github.com/AeneasVerif/aeneas.git))

(homepage "https://github.com/AeneasVerif/aeneas")

(bug_reports "https://github.com/AeneasVerif/aeneas/issues")

(authors
  "Son Ho"
  "Jonathan Protzenko"
  "Aymeric Fromherz"
  "Sidney Congard")

(license Apache-2.0)
