(executable
 (public_name test_runner)
 (libraries core_unix core_unix.filename_unix core_unix.sys_unix re str unix)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_sexp_conv))
 (name run_test)
 (modules Backend Input Utils run_test))

(env
 (dev
  (flags :standard -warn-error -5@8-11-14-32-33-20-21-26-27-39)))
