[package]
name = "betree"
version = "0.1.0"
authors = ["Son Ho <hosonmarc@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

# TODO: If we turn this package into a library, building the tests by hand fails.
